# bcc-db-sync

./: CODEOWNERS  README.md  Readme.md  bors.toml  cabal.project  default.nix  docker-compose.yml  flake.nix  nix-shell.project  release.nix  shell.nix
bcc-db/: CHANGELOG.md  bcc-db.cabal
bcc-db-sync/: CHANGELOG.md  Setup.hs  bcc-db-sync.cabal
bcc-db-sync-extended/: CHANGELOG.md  bcc-db-sync-extended.cabal
bcc-db-sync-extended/app/: bcc-db-sync-extended.hs
bcc-db-sync-extended/src/Bcc/DbSync/Plugin/: Extended.hs
bcc-db-sync/app/: bcc-db-sync.hs
bcc-db-sync/src/Bcc/: DbSync.hs
bcc-db-sync/src/Bcc/DbSync/: Era.hs  Metrics.hs  Rollback.hs
bcc-db-sync/src/Bcc/DbSync/Era/: Util.hs
bcc-db-sync/src/Bcc/DbSync/Era/Bcc/: Insert.hs  Util.hs
bcc-db-sync/src/Bcc/DbSync/Era/Cole/: Genesis.hs  Insert.hs  Util.hs
bcc-db-sync/src/Bcc/DbSync/Era/Sophie/: Adjust.hs  Generic.hs  Genesis.hs  Insert.hs  Offline.hs  Query.hs  Validate.hs
bcc-db-sync/src/Bcc/DbSync/Era/Sophie/Generic/: Block.hs  Metadata.hs  ParamProposal.hs  Tx.hs  Util.hs  Witness.hs
bcc-db-sync/src/Bcc/DbSync/Era/Sophie/Insert/: Epoch.hs
bcc-db-sync/src/Bcc/DbSync/Era/Sophie/Offline/: FetchQueue.hs  Http.hs  Query.hs  Types.hs
bcc-db-sync/src/Bcc/DbSync/Plugin/: Default.hs  Epoch.hs
bcc-db-tool/: CHANGELOG.md  bcc-db-tool.cabal
bcc-db-tool/app/: bcc-db-tool.hs
bcc-db-tool/src/Bcc/Db/: Tool.hs
bcc-db-tool/src/Bcc/Db/Tool/: PrepareSnapshot.hs  Report.hs  UtxoSet.hs  Validation.hs
bcc-db-tool/src/Bcc/Db/Tool/Report/: Balance.hs  Display.hs  StakeReward.hs  Synced.hs  Transactions.hs
bcc-db-tool/src/Bcc/Db/Tool/Report/StakeReward/: History.hs  Latest.hs
bcc-db-tool/src/Bcc/Db/Tool/Validate/: Balance.hs  BlockProperties.hs  BlockTxs.hs  EpochTable.hs  GodxPots.hs  Ledger.hs  PoolOwner.hs  TotalSupply.hs  TxAccounting.hs  Util.hs
bcc-db/app/: gen-schema-docs.hs
bcc-db/src/Bcc/: Db.hs
bcc-db/src/Bcc/Db/: Delete.hs  Error.hs  Insert.hs  Migration.hs  PGConfig.hs  Query.hs  Run.hs  Schema.hs  Text.hs  Types.hs
bcc-db/src/Bcc/Db/Migration/: Haskell.hs  Version.hs
bcc-db/src/Bcc/Db/Schema/: Orphans.hs  Types.hs
bcc-db/test/: bcc-db-test.cabal  test-db.hs  test.hs
bcc-db/test/Test/IO/Bcc/Db/: Insert.hs  Migration.hs  Rollback.hs  TotalSupply.hs  Util.hs
bcc-db/test/Test/Property/: Upstream.hs
bcc-db/test/Test/Property/Bcc/Db/: Migration.hs  Types.hs
bcc-sync/: CHANGELOG.md  bcc-sync.cabal
bcc-sync/src/Bcc/: Sync.hs
bcc-sync/src/Bcc/Sync/: Api.hs  Config.hs  Database.hs  DbAction.hs  Error.hs  LedgerState.hs  Metrics.hs  Plugin.hs  StateQuery.hs  Types.hs  Util.hs
bcc-sync/src/Bcc/Sync/Config/: Abraham.hs  Godx.hs  Jacob.hs  Node.hs  Sarah.hs  Types.hs
bcc-sync/src/Bcc/Sync/Era/Bcc/: Util.hs
bcc-sync/src/Bcc/Sync/Era/Cole/: Util.hs
bcc-sync/src/Bcc/Sync/Era/Sophie/: Generic.hs
bcc-sync/src/Bcc/Sync/Era/Sophie/Generic/: EpochUpdate.hs  ProtoParams.hs  Rewards.hs  StakeCred.hs  StakeDist.hs
bcc-sync/src/Bcc/Sync/Tracing/: ToObjectOrphans.hs
config/: mainnet-aurum-genesis.json  mainnet-cole-genesis.json  mainnet-config.json.1  mainnet-config.yaml  mainnet-sophie-genesis.json  pgpass-mainnet  pgpass-sophie-qa-testnet  sophie-qa-testnet.yaml  testnet-config.json  testnet-sophie-genesis.json
custom-config/: flake.nix
doc/: building-running.md  docker.md  interesting-queries.md  plugin-system.md  schema-management.md  schema.md  state-snapshot.md  syncing-and-rollbacks.md  troubleshooting.md  validation.md
monitoring/: explorer-dashboard.json
nix/: binary-release.nix  default.nix  docker.nix  haskell.nix  pkgs.nix  scripts.nix
nix/nixos/: bcc-db-sync-service.nix  module-list.nix
schema/: migration-1-0000-20190730.sql  migration-1-0001-20190730.sql  migration-1-0002-20190912.sql  migration-1-0009-20210727.sql  migration-2-0001-20210526.sql  migration-2-0004-20210609.sql  migration-2-0007-20210617.sql  migration-2-0009-20210624.sql  migration-2-0011-20210719.sql  migration-2-0012-20210723.sql  migration-2-0016-20210804.sql  migration-2-0020-20210810.sql  migration-3-0001-20190816.sql  migration-3-0002-20200521.sql  migration-3-9999-20200728.sql
scripts/: postgresql-setup.sh
