cabal-version:          2.4

-- http://haskell.org/cabal/users-guide/

name:                   bcc-db-sync
version:                10.0.1
synopsis:               The Godx DB Sync node
description:            A Godx node that follows the Godx chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/The-Blockchain-Company/bcc-db-sync
bug-reports:            https://github.com/The-Blockchain-Company/bcc-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 tbco Engineering Team
maintainer:             operations@blockchain-company.io
copyright:              (c) 2019 tbco
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/*.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , bytestring
                      , bcc-crypto-class
                      , directory
                      , filepath

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Godx.DbSync

                        Godx.DbSync.Era

                        Godx.DbSync.Era.Cole.Genesis
                        Godx.DbSync.Era.Cole.Insert
                        Godx.DbSync.Era.Cole.Util

                        Godx.DbSync.Era.Godx.Insert
                        Godx.DbSync.Era.Godx.Util

                        Godx.DbSync.Era.Sophie.Adjust
                        Godx.DbSync.Era.Sophie.Genesis
                        Godx.DbSync.Era.Sophie.Generic
                        Godx.DbSync.Era.Sophie.Generic.Block
                        Godx.DbSync.Era.Sophie.Generic.Metadata
                        Godx.DbSync.Era.Sophie.Generic.ParamProposal
                        Godx.DbSync.Era.Sophie.Generic.Tx
                        Godx.DbSync.Era.Sophie.Generic.Util
                        Godx.DbSync.Era.Sophie.Generic.Witness
                        Godx.DbSync.Era.Sophie.Insert
                        Godx.DbSync.Era.Sophie.Insert.Epoch
                        Godx.DbSync.Era.Sophie.Offline
                        Godx.DbSync.Era.Sophie.Offline.FetchQueue
                        Godx.DbSync.Era.Sophie.Offline.Http
                        Godx.DbSync.Era.Sophie.Offline.Query
                        Godx.DbSync.Era.Sophie.Offline.Types
                        Godx.DbSync.Era.Sophie.Query
                        Godx.DbSync.Era.Sophie.Validate

                        Godx.DbSync.Era.Util

                        Godx.DbSync.Metrics

                        Godx.DbSync.Plugin.Default
                        Godx.DbSync.Plugin.Epoch

                        Godx.DbSync.Rollback

  build-depends:        base                            >= 4.14         && < 4.16
                      , aeson
                      , binary
                      , bytestring
                      , base16-bytestring
                      , bcc-api
                      , bcc-binary
                      , bcc-crypto
                      , bcc-crypto-class
                      , bcc-crypto-optimum
                      , bcc-crypto-wrapper
                      , bcc-db
                      , bcc-sync
                      , bcc-ledger-aurum
                      , bcc-ledger-cole
                      , bcc-ledger-core
                      , bcc-ledger-sophie-ma
                      , bcc-prelude
                      , bcc-slotting
                      , containers
                      , esqueleto
                      , exceptions
                      , extra
                      , groups
                      , http-client
                      , http-client-tls
                      , http-types
                      , tbco-monitoring
                      , io-classes
                      , monad-control
                      , monad-logger
                      , shardagnostic-consensus
                      , shardagnostic-consensus-cole
                      , shardagnostic-consensus-bcc
                      , shardagnostic-consensus-sophie
                      , shardagnostic-network
                      , persistent
                      , persistent-postgresql
                      , postgresql-simple
                      , prometheus
                      , random-shuffle
                      , small-steps
                      , split
                      , sophie-spec-ledger
                      , strict-containers
                      , swagger2
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , vector

executable bcc-db-sync
  default-language:     Haskell2010
  main-is:              bcc-db-sync.hs
  hs-source-dirs:       gen, app

  ghc-options:          -O2
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -with-rtsopts=-N3

  autogen-modules:      Paths_bcc_db_sync
                        MigrationValidations
  other-modules:        Paths_bcc_db_sync
                        MigrationValidations

  build-depends:        base                            >= 4.14         && < 4.16
                      , bcc-config
                      , bcc-sync
                      , bcc-db-sync
                      , bcc-prelude
                      , bcc-slotting
                      , optparse-applicative
                      , text
