cabal-version:          2.4

-- http://haskell.org/cabal/users-guide/

name:                   bcc-db-sync
version:                10.0.1
synopsis:               The Bcc DB Sync node
description:            A Bcc node that follows the Bcc chain and inserts data from the
                        chain into a PostgresQL database.
homepage:               https://github.com/The-Blockchain-Company/bcc-db-sync
bug-reports:            https://github.com/The-Blockchain-Company/bcc-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 tbco Engineering Team
maintainer:             operations@blockchain-company.io
copyright:              (c) 2019 tbco
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/*.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , bytestring
                      , bcc-crypto-class
                      , directory
                      , filepath

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Bcc.DbSync

                        Bcc.DbSync.Era

                        Bcc.DbSync.Era.Cole.Genesis
                        Bcc.DbSync.Era.Cole.Insert
                        Bcc.DbSync.Era.Cole.Util

                        Bcc.DbSync.Era.Bcc.Insert
                        Bcc.DbSync.Era.Bcc.Util

                        Bcc.DbSync.Era.Sophie.Adjust
                        Bcc.DbSync.Era.Sophie.Genesis
                        Bcc.DbSync.Era.Sophie.Generic
                        Bcc.DbSync.Era.Sophie.Generic.Block
                        Bcc.DbSync.Era.Sophie.Generic.Metadata
                        Bcc.DbSync.Era.Sophie.Generic.ParamProposal
                        Bcc.DbSync.Era.Sophie.Generic.Tx
                        Bcc.DbSync.Era.Sophie.Generic.Util
                        Bcc.DbSync.Era.Sophie.Generic.Witness
                        Bcc.DbSync.Era.Sophie.Insert
                        Bcc.DbSync.Era.Sophie.Insert.Epoch
                        Bcc.DbSync.Era.Sophie.Offline
                        Bcc.DbSync.Era.Sophie.Offline.FetchQueue
                        Bcc.DbSync.Era.Sophie.Offline.Http
                        Bcc.DbSync.Era.Sophie.Offline.Query
                        Bcc.DbSync.Era.Sophie.Offline.Types
                        Bcc.DbSync.Era.Sophie.Query
                        Bcc.DbSync.Era.Sophie.Validate

                        Bcc.DbSync.Era.Util

                        Bcc.DbSync.Metrics

                        Bcc.DbSync.Plugin.Default
                        Bcc.DbSync.Plugin.Epoch

                        Bcc.DbSync.Rollback

  build-depends:        base                            >= 4.14         && < 4.16
                      , aeson
                      , binary
                      , bytestring
                      , base16-bytestring
                      , bcc-api
                      , bcc-binary
                      , bcc-crypto
                      , bcc-crypto-class
                      , bcc-crypto-optimum
                      , bcc-crypto-wrapper
                      , bcc-db
                      , bcc-sync
                      , bcc-ledger-aurum
                      , bcc-ledger-cole
                      , bcc-ledger-core
                      , bcc-ledger-sophie-ma
                      , bcc-prelude
                      , bcc-slotting
                      , containers
                      , esqueleto
                      , exceptions
                      , extra
                      , groups
                      , http-client
                      , http-client-tls
                      , http-types
                      , tbco-monitoring
                      , io-classes
                      , monad-control
                      , monad-logger
                      , shardagnostic-consensus
                      , shardagnostic-consensus-cole
                      , shardagnostic-consensus-bcc
                      , shardagnostic-consensus-sophie
                      , shardagnostic-network
                      , persistent
                      , persistent-postgresql
                      , postgresql-simple
                      , prometheus
                      , random-shuffle
                      , small-steps
                      , split
                      , sophie-spec-ledger
                      , strict-containers
                      , swagger2
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , vector

executable bcc-db-sync
  default-language:     Haskell2010
  main-is:              bcc-db-sync.hs
  hs-source-dirs:       gen, app

  ghc-options:          -O2
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -with-rtsopts=-N3

  autogen-modules:      Paths_bcc_db_sync
                        MigrationValidations
  other-modules:        Paths_bcc_db_sync
                        MigrationValidations

  build-depends:        base                            >= 4.14         && < 4.16
                      , bcc-config
                      , bcc-sync
                      , bcc-db-sync
                      , bcc-prelude
                      , bcc-slotting
                      , optparse-applicative
                      , text
