cabal-version:          2.2

-- http://haskell.org/cabal/users-guide/

name:                   bcc-db-tool
version:                10.0.1
synopsis:               Utilities to manage the bcc-db-sync databases.
description:            Utilities and executable, used to manage and validate the
                        PostgreSQL db and the ledger database of the bcc-db-sync node
homepage:               https://github.com/The-Blockchain-Company/bcc-db-sync
bug-reports:		    https://github.com/The-Blockchain-Company/bcc-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 tbco Engineering Team
maintainer:             operations@blockchain-company.io
copyright:              (c) 2019 tbco
category:               Cryptocurrency
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Bcc.Db.Tool

  other-modules:        Bcc.Db.Tool.PrepareSnapshot
                        Bcc.Db.Tool.Report
                        Bcc.Db.Tool.Report.Balance
                        Bcc.Db.Tool.Report.Display
                        Bcc.Db.Tool.Report.StakeReward
                        Bcc.Db.Tool.Report.StakeReward.History
                        Bcc.Db.Tool.Report.StakeReward.Latest
                        Bcc.Db.Tool.Report.Synced
                        Bcc.Db.Tool.Report.Transactions
                        Bcc.Db.Tool.UtxoSet
                        Bcc.Db.Tool.Validation
                        Bcc.Db.Tool.Validate.BccPots
                        Bcc.Db.Tool.Validate.Balance
                        Bcc.Db.Tool.Validate.BlockProperties
                        Bcc.Db.Tool.Validate.BlockTxs
                        Bcc.Db.Tool.Validate.EpochTable
                        Bcc.Db.Tool.Validate.Ledger
                        Bcc.Db.Tool.Validate.PoolOwner
                        Bcc.Db.Tool.Validate.TotalSupply
                        Bcc.Db.Tool.Validate.TxAccounting
                        Bcc.Db.Tool.Validate.Util
                        Paths_bcc_db_tool

  build-depends:        base                            >= 4.14         && < 4.16
                      , base16-bytestring
                      , bytestring
                      , ansi-terminal
                      , bcc-api
                      , bcc-db
                      , bcc-sync
                      , bcc-ledger-aurum
                      , bcc-ledger-cole
                      , bcc-ledger-core
                      , bcc-prelude
                      , bcc-slotting
                      , containers
                      , esqueleto
                      , extra
                      , shardagnostic-consensus
                      , shardagnostic-consensus-cole
                      , shardagnostic-consensus-bcc
                      , shardagnostic-consensus-sophie
                      , shardagnostic-network
                      , persistent
                      , random
                      , sophie-spec-ledger
                      , text
                      , time
                      , transformers
                      , transformers-except

executable bcc-db-tool
  default-language:     Haskell2010
  main-is:              bcc-db-tool.hs
  hs-source-dirs:       app

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  build-depends:        base                            >= 4.14         && < 4.16
                      , bcc-db
                      , bcc-db-tool
                      , bcc-sync
                      , bcc-slotting
                      , optparse-applicative
                      , text
